--- a/desktop/package.json
+++ b/desktop/package.json
@@ -48,7 +48,7 @@
     "purepack": "1.0.4",
     "qrcode-generator": "1.0.0",
     "react": "15.2.1",
-    "react-addons-css-transition-group": "^15.2.1",
+    "react-addons-css-transition-group": "15.2.1",
     "react-dom": "15.2.1",
     "react-redux": "4.4.5",
     "react-tap-event-plugin": "1.0.0",
