--- a/desktop/package.json
+++ b/desktop/package.json
@@ -48,6 +48,7 @@
     "purepack": "1.0.4",
     "qrcode-generator": "1.0.0",
     "react": "15.2.1",
+    "react-addons-css-transition-group": "15.2.1",
     "react-dom": "15.2.1",
     "react-redux": "4.4.5",
     "react-tap-event-plugin": "1.0.0",
@@ -108,5 +109,5 @@
   "optionalDependencies": {
     "fsevents": "1.0.14"
   },
-  "keybaseVendoredDependencies": "https://github.com/keybase/js-vendor-desktop.git#4b6bac62e7c443bb66729b37f55fe717800349c9"
+  "keybaseVendoredDependencies": "https://github.com/keybase/js-vendor-desktop.git#ac1deb16af4f20f19de821157ed0587fb73e85c2"
 }
