--- a/desktop/package.json
+++ b/desktop/package.json
@@ -35,6 +35,7 @@
   "dependencies": {
     "deep-diff": "^0.3.4",
     "deep-equal": "^1.0.1",
+    "electron-prebuilt": "1.3.2",
     "framed-msgpack-rpc": "git://github.com/keybase/node-framed-msgpack-rpc#f3e1a3eb410e0bcde950bae14ceef7015c7315c8",
     "getenv": "0.6.0",
     "immutable": "3.8.1",
@@ -109,5 +110,5 @@
   "optionalDependencies": {
     "fsevents": "1.0.14"
   },
-  "keybaseVendoredDependencies": "https://github.com/keybase/js-vendor-desktop.git#ac1deb16af4f20f19de821157ed0587fb73e85c2"
+  "keybaseVendoredDependencies": "https://github.com/keybase/js-vendor-desktop.git#69a46559ad44c6c76beed9aa9c91e70d8d9abba4"
 }
