--- a/protocol/Makefile
+++ b/protocol/Makefile
@@ -11,7 +11,7 @@ json/%.json: avdl/%.avdl
 	$(AVDL2JSON) -i $< -o $@~ && mv $@~ $@
 
 config:
-	npm i
+	# npm i
 
 # By default, all avdl/*.avdl are considered and made into outputs
 # as long as they have messages in them. BUT you can override this
