--- a/desktop/package.json
+++ b/desktop/package.json
@@ -53,6 +53,7 @@
     "react-redux": "4.4.5",
     "react-tap-event-plugin": "1.0.0",
     "redux": "3.5.2",
+    "redux-saga": "0.11.0",
     "redux-thunk": "2.1.0",
     "semver": "5.3.0"
   },
