--- a/react-native/package.json
+++ b/react-native/package.json
@@ -30,6 +30,7 @@
     "react-native-camera": "git://github.com/lwansbrough/react-native-camera.git#9ddc787cb5e40e088596dbc823583ba4aade7ecf",
     "react-redux": "4.4.5",
     "redux": "3.5.2",
+    "redux-saga": "0.11.0",
     "redux-thunk": "2.1.0",
     "transit-immutable-js": "0.6.0",
     "transit-js": "0.8.846",
