--- a/desktop/package.json
+++ b/desktop/package.json
@@ -33,8 +33,8 @@
   "license": "MIT",
   "private": true,
   "dependencies": {
-    "deep-diff": "^0.3.4",
-    "deep-equal": "^1.0.1",
+    "deep-diff": "0.3.4",
+    "deep-equal": "1.0.1",
     "framed-msgpack-rpc": "git://github.com/keybase/node-framed-msgpack-rpc#f3e1a3eb410e0bcde950bae14ceef7015c7315c8",
     "getenv": "0.6.0",
     "immutable": "3.8.1",
@@ -77,17 +77,17 @@
     "electron-download": "git://github.com/keybase/electron-download#5350b5a1bad8ba7bb8c7201abe59ae3a03c3d75d",
     "electron-packager": "7.5.1",
     "electron-prebuilt": "1.3.2",
-    "eslint": "^3.2.2",
+    "eslint": "3.2.2",
     "eslint-config-standard": "5.3.5",
     "eslint-config-standard-jsx": "2.0.0",
     "eslint-config-standard-react": "3.0.0",
     "eslint-plugin-babel": "3.3.0",
-    "eslint-plugin-filenames": "^1.1.0",
-    "eslint-plugin-flow-vars": "^0.5.0",
-    "eslint-plugin-import": "^1.12.0",
-    "eslint-plugin-mocha": "^4.3.0",
-    "eslint-plugin-promise": "^2.0.1",
-    "eslint-plugin-react": "^6.0.0",
+    "eslint-plugin-filenames": "1.1.0",
+    "eslint-plugin-flow-vars": "0.5.0",
+    "eslint-plugin-import": "1.12.0",
+    "eslint-plugin-mocha": "4.3.0",
+    "eslint-plugin-promise": "2.0.1",
+    "eslint-plugin-react": "6.0.0",
     "eslint-plugin-standard": "2.0.0",
     "express": "4.14.0",
     "fs-extra": "0.30.0",
