--- a/desktop/package.json
+++ b/desktop/package.json
@@ -33,23 +33,22 @@
   "license": "MIT",
   "private": true,
   "dependencies": {
-    "deep-diff": "^0.3.4",
-    "deep-equal": "^1.0.1",
+    "deep-diff": "0.3.4",
+    "deep-equal": "1.0.1",
     "framed-msgpack-rpc": "git://github.com/keybase/node-framed-msgpack-rpc#f3e1a3eb410e0bcde950bae14ceef7015c7315c8",
     "getenv": "0.6.0",
     "immutable": "3.8.1",
     "jsonfile": "2.3.1",
-    "lodash": "4.13.1",
-    "marked": "0.3.5",
-    "material-ui": "0.15.2",
-    "menubar": "5.0.0",
+    "lodash": "4.14.2",
+    "material-ui": "0.15.3",
+    "menubar": "5.1.0",
     "mkdirp": "0.5.1",
     "moment": "2.14.1",
     "purepack": "1.0.4",
     "qrcode-generator": "1.0.0",
-    "react": "15.2.1",
-    "react-addons-css-transition-group": "15.2.1",
-    "react-dom": "15.2.1",
+    "react": "15.3.0",
+    "react-addons-css-transition-group": "15.3.0",
+    "react-dom": "15.3.0",
     "react-redux": "4.4.5",
     "react-tap-event-plugin": "1.0.0",
     "redux": "3.5.2",
@@ -59,42 +58,42 @@
   },
   "devDependencies": {
     "babel": "6.5.2",
-    "babel-cli": "6.10.1",
-    "babel-core": "6.10.4",
+    "babel-cli": "6.11.4",
+    "babel-core": "6.13.2",
     "babel-eslint": "6.1.2",
     "babel-loader": "6.2.4",
     "babel-plugin-react-transform": "2.0.2",
-    "babel-plugin-transform-runtime": "6.9.0",
-    "babel-preset-es2015": "6.9.0",
+    "babel-plugin-transform-runtime": "6.12.0",
+    "babel-preset-es2015": "6.13.2",
     "babel-preset-react": "6.11.1",
-    "babel-preset-stage-1": "6.5.0",
-    "babel-preset-stage-2": "6.11.0",
-    "babel-runtime": "6.9.2",
+    "babel-preset-stage-1": "6.13.0",
+    "babel-preset-stage-2": "6.13.0",
+    "babel-runtime": "6.11.6",
     "chai": "3.5.0",
     "chai-as-promised": "5.3.0",
     "del": "2.2.1",
-    "devtron": "1.2.1",
+    "devtron": "1.3.0",
     "electron-download": "git://github.com/keybase/electron-download#5350b5a1bad8ba7bb8c7201abe59ae3a03c3d75d",
-    "electron-packager": "7.3.0",
+    "electron-packager": "7.5.1",
     "electron-prebuilt": "1.3.2",
-    "eslint": "3.0.1",
+    "eslint": "3.2.2",
     "eslint-config-standard": "5.3.5",
     "eslint-config-standard-jsx": "2.0.0",
     "eslint-config-standard-react": "3.0.0",
     "eslint-plugin-babel": "3.3.0",
-    "eslint-plugin-filenames": "1.0.0",
-    "eslint-plugin-flow-vars": "0.4.0",
-    "eslint-plugin-import": "1.10.3",
-    "eslint-plugin-mocha": "4.0.0",
-    "eslint-plugin-promise": "2.0.0",
-    "eslint-plugin-react": "5.2.2",
+    "eslint-plugin-filenames": "1.1.0",
+    "eslint-plugin-flow-vars": "0.5.0",
+    "eslint-plugin-import": "1.12.0",
+    "eslint-plugin-mocha": "4.3.0",
+    "eslint-plugin-promise": "2.0.1",
+    "eslint-plugin-react": "6.0.0",
     "eslint-plugin-standard": "2.0.0",
     "express": "4.14.0",
     "fs-extra": "0.30.0",
     "minimist": "1.2.0",
-    "mocha": "2.5.3",
+    "mocha": "3.0.2",
     "null-loader": "0.1.1",
-    "react-addons-perf": "15.2.1",
+    "react-addons-perf": "15.3.0",
     "react-hot-loader": "3.0.0-beta.2",
     "redux-devtools": "3.3.1",
     "redux-devtools-dock-monitor": "1.1.1",
@@ -104,11 +103,11 @@
     "webpack": "1.13.1",
     "webpack-dev-middleware": "1.6.1",
     "webpack-dev-server": "1.14.1",
-    "webpack-hot-middleware": "2.12.1",
+    "webpack-hot-middleware": "2.12.2",
     "webpack-target-electron-renderer": "0.4.0"
   },
   "optionalDependencies": {
     "fsevents": "1.0.14"
   },
-  "keybaseVendoredDependencies": "https://github.com/keybase/js-vendor-desktop.git#255431fcc79d6e3330ca3251dd1a3ce83977d225"
+  "keybaseVendoredDependencies": "https://github.com/keybase/js-vendor-desktop.git#6f1c2913ce21eae10ebfb760d3dcf73b6f328c66"
 }
