Refactored engine object
rebase

remove engine/index.js.flow file. flow broken

fix flow

RN can't do assign on actual class objects w/ proto chains

output waiting state in log

spacing

manage mutating onConnectHandlers while connecting

add dangling flag for immortal sessions. add _startmethod to help debug sessions. add incomingcallhandler for unhandled rpcs that should be in the session

you shouldn't destructure objects!

plumb through cancel

remove call map middleware. fix actionbarReady

cleanup flow generation

dont export rpcs that are ui incoming ones

removing non-ui calls from the incomingcallmap type

removing engine error stuff. moved enums over to flow-types

fixing rebase

fixing rebase

remove old comment

rebasing master

rebasing

--- a/protocol/Makefile
+++ b/protocol/Makefile
@@ -41,11 +41,6 @@ js/flow-types.js: build-stamp | config
 	node --harmony ./bin/flow.js
 	cp ./js/flow-types* ../shared/constants/types
 
-js/keybase_v1.js: build-stamp | config
-	@mkdir -p js/
-	node --harmony ./bin/js.js
-	cp ./js/keybase-v1.js ../shared/constants/types
-
 clean:
 	rm -rf json/*/*.json js/*.js *build-stamp
 	$(AVDLC) -c -b -l go -o ../go/protocol/keybase1 avdl/keybase1/*.avdl
@@ -55,6 +50,6 @@ clean:
 fmt:
 	@./fmt.sh
 
-build: fmt build-stamp go-build-stamp js/keybase_v1.js js/flow-types.js
+build: fmt build-stamp go-build-stamp js/flow-types.js
 
 .PHONY: test config
