--- a/react-native/android/app/build.gradle
+++ b/react-native/android/app/build.gradle
@@ -162,6 +162,10 @@ dependencies {
         // workaround issue https://github.com/tony19/logback-android/issues/73
         exclude group: 'com.google.android', module: 'android'
     }
+    // Manually include GIF support for Fresco b/c it was removed from
+    // core library and RN doesn't auto add it back yet (RN 0.30.0)
+    // @see DESKTOP-1703
+    compile 'com.facebook.fresco:animated-gif:0.11.0'
     debugCompile 'com.hanhuy.android:viewserver:1.0.3'
     compile project(':keybaselib')
     testCompile 'junit:junit:4.12'
