Add defaultDeviceID, deviceErr to ExtendedStatus
deviceErr includes any errors loading the me user
or getting the current device from the computed key family.

defaultDeviceID is the deviceID in the config file.

--- a/protocol/json/config.json
+++ b/protocol/json/config.json
@@ -111,6 +111,20 @@
     },
     {
       "type": "record",
+      "name": "LoadDeviceErr",
+      "fields": [
+        {
+          "type": "string",
+          "name": "where"
+        },
+        {
+          "type": "string",
+          "name": "desc"
+        }
+      ]
+    },
+    {
+      "type": "record",
       "name": "ExtendedStatus",
       "fields": [
         {
@@ -157,6 +171,13 @@
           "name": "device"
         },
         {
+          "type": [
+            null,
+            "LoadDeviceErr"
+          ],
+          "name": "deviceErr"
+        },
+        {
           "type": "string",
           "name": "logDir"
         },
@@ -188,6 +209,10 @@
         {
           "type": "PlatformInfo",
           "name": "platformInfo"
+        },
+        {
+          "type": "DeviceID",
+          "name": "defaultDeviceID"
         }
       ]
     },
