--- a/protocol/package.json
+++ b/protocol/package.json
@@ -17,7 +17,7 @@
   },
   "homepage": "https://github.com/keybase/protocol",
   "dependencies": {
-    "avdl-compiler": "1.3.1",
+    "avdl-compiler": "^1.3.4",
     "avdl2json": "2.2.0",
     "bluebird": "^2.10.0",
     "iced-coffee-script": "^108.0.9",
