--- a/desktop/package.json
+++ b/desktop/package.json
@@ -100,7 +100,9 @@
     "redux-devtools-log-monitor": "1.0.11",
     "redux-logger": "2.6.1",
     "source-map-support": "0.4.2",
+    "unused-files-webpack-plugin": "2.0.4",
     "webpack": "1.13.1",
+    "webpack-dashboard": "0.1.1",
     "webpack-dev-middleware": "1.6.1",
     "webpack-dev-server": "1.14.1",
     "webpack-hot-middleware": "2.12.2",
