--- a/react-native/android/gradle/wrapper/gradle-wrapper.properties
+++ b/react-native/android/gradle/wrapper/gradle-wrapper.properties
@@ -1,4 +1,4 @@
-#Wed Aug 17 16:16:46 PDT 2016
+#Fri Aug 19 16:09:49 EDT 2016
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
