--- a/desktop/package.json
+++ b/desktop/package.json
@@ -39,16 +39,16 @@
     "getenv": "0.6.0",
     "immutable": "3.8.1",
     "jsonfile": "2.3.1",
-    "lodash": "4.14.2",
-    "material-ui": "0.15.3",
+    "lodash": "4.15.0",
+    "material-ui": "0.15.4",
     "menubar": "5.1.0",
     "mkdirp": "0.5.1",
     "moment": "2.14.1",
     "purepack": "1.0.4",
-    "qrcode-generator": "1.0.0",
-    "react": "15.3.0",
-    "react-addons-css-transition-group": "15.3.0",
-    "react-dom": "15.3.0",
+    "qrcode-generator": "1.0.3",
+    "react": "15.3.1",
+    "react-addons-css-transition-group": "15.3.1",
+    "react-dom": "15.3.1",
     "react-redux": "4.4.5",
     "react-tap-event-plugin": "1.0.0",
     "redux": "3.5.2",
@@ -61,7 +61,7 @@
     "babel-cli": "6.11.4",
     "babel-core": "6.13.2",
     "babel-eslint": "6.1.2",
-    "babel-loader": "6.2.4",
+    "babel-loader": "6.2.5",
     "babel-plugin-react-transform": "2.0.2",
     "babel-plugin-transform-runtime": "6.12.0",
     "babel-preset-es2015": "6.13.2",
@@ -71,29 +71,29 @@
     "babel-runtime": "6.11.6",
     "chai": "3.5.0",
     "chai-as-promised": "5.3.0",
-    "del": "2.2.1",
+    "del": "2.2.2",
     "devtron": "1.3.0",
     "electron-download": "git://github.com/keybase/electron-download#5350b5a1bad8ba7bb8c7201abe59ae3a03c3d75d",
-    "electron-packager": "7.5.1",
-    "electron-prebuilt": "1.3.2",
-    "eslint": "3.2.2",
-    "eslint-config-standard": "5.3.5",
-    "eslint-config-standard-jsx": "2.0.0",
+    "electron-packager": "7.6.0",
+    "electron-prebuilt": "1.3.3",
+    "eslint": "3.3.1",
+    "eslint-config-standard": "6.0.0-beta.3",
+    "eslint-config-standard-jsx": "3.0.0",
     "eslint-config-standard-react": "3.0.0",
     "eslint-plugin-babel": "3.3.0",
     "eslint-plugin-filenames": "1.1.0",
     "eslint-plugin-flow-vars": "0.5.0",
-    "eslint-plugin-import": "1.12.0",
+    "eslint-plugin-import": "1.13.0",
     "eslint-plugin-mocha": "4.3.0",
     "eslint-plugin-promise": "2.0.1",
-    "eslint-plugin-react": "6.0.0",
+    "eslint-plugin-react": "6.1.2",
     "eslint-plugin-standard": "2.0.0",
     "express": "4.14.0",
     "fs-extra": "0.30.0",
     "minimist": "1.2.0",
     "mocha": "3.0.2",
     "null-loader": "0.1.1",
-    "react-addons-perf": "15.3.0",
+    "react-addons-perf": "15.3.1",
     "react-hot-loader": "3.0.0-beta.2",
     "redux-devtools": "3.3.1",
     "redux-devtools-dock-monitor": "1.1.1",
@@ -101,8 +101,8 @@
     "redux-logger": "2.6.1",
     "source-map-support": "0.4.2",
     "unused-files-webpack-plugin": "2.0.4",
-    "webpack": "1.13.1",
-    "webpack-dashboard": "0.1.1",
+    "webpack": "1.13.2",
+    "webpack-dashboard": "0.1.5",
     "webpack-dev-middleware": "1.6.1",
     "webpack-dev-server": "1.14.1",
     "webpack-hot-middleware": "2.12.2",
@@ -111,5 +111,5 @@
   "optionalDependencies": {
     "fsevents": "1.0.14"
   },
-  "keybaseVendoredDependencies": "https://github.com/keybase/js-vendor-desktop.git#b7bb2054a85b7a6ddd09a3bab4d1960601df70f9"
+  "keybaseVendoredDependencies": "https://github.com/keybase/js-vendor-desktop.git#2c016997c78878b73a083ee223a6920e5cde39dd"
 }
