--- a/desktop/package.json
+++ b/desktop/package.json
@@ -35,7 +35,7 @@
   "dependencies": {
     "deep-diff": "0.3.4",
     "deep-equal": "1.0.1",
-    "framed-msgpack-rpc": "git://github.com/keybase/node-framed-msgpack-rpc#f3e1a3eb410e0bcde950bae14ceef7015c7315c8",
+    "framed-msgpack-rpc": "1.1.13",
     "getenv": "0.6.0",
     "immutable": "3.8.1",
     "jsonfile": "2.3.1",
