--- a/react-native/package.json
+++ b/react-native/package.json
@@ -13,24 +13,24 @@
     "postinstall": "npm run sync; node make-shim net ; node make-shim tls ; node make-shim msgpack"
   },
   "dependencies": {
-    "buffer": "4.7.1",
+    "buffer": "4.9.1",
     "deep-diff": "0.3.4",
-    "framed-msgpack-rpc": "git://github.com/keybase/node-framed-msgpack-rpc.git#e3c96a2ebb8350836f5bae9710b89d04fb1fc87a",
+    "framed-msgpack-rpc": "1.1.13",
     "getenv": "0.6.0",
     "iced-runtime": "1.0.3",
     "immutable": "3.8.1",
-    "lodash": "4.14.0",
+    "lodash": "4.15.0",
     "moment": "2.14.1",
     "purepack": "1.0.4",
     "qrcode-generator": "1.0.0",
-    "react": "15.2.1",
-    "react-native": "0.31.0",
+    "react": "15.3.1",
+    "react-native": "0.32.0",
     "react-native-android-permissions": "0.0.6",
     "react-native-barcodescanner": "3.0.1",
     "react-native-camera": "git://github.com/lwansbrough/react-native-camera.git#9ddc787cb5e40e088596dbc823583ba4aade7ecf",
     "react-redux": "4.4.5",
     "redux": "3.5.2",
-    "redux-saga": "0.11.0",
+    "redux-saga": "0.11.1",
     "redux-thunk": "2.1.0",
     "transit-immutable-js": "0.6.0",
     "transit-js": "0.8.846",
