--- a/react-native/package.json
+++ b/react-native/package.json
@@ -11,7 +11,7 @@
     "sync": "rsync -avhW --delete --exclude='*.desktop.js' ../shared/ ./shared/",
     "wrap": "npm prune && npm shrinkwrap --dev",
     "postinstall": "npm run sync; node make-shim net ; node make-shim tls ; node make-shim msgpack",
-    "test-ios": "xcodebuild test -project ios/Keybase.xcodeproj -scheme Keybase -destination 'platform=iOS Simulator,name=iPhone 6s,OS=9.3'"
+    "test-ios": "xcodebuild test -project ios/Keybase.xcodeproj -scheme 'Keybase For Test' -destination 'platform=iOS Simulator,name=iPhone 6s,OS=9.3'"
   },
   "dependencies": {
     "buffer": "4.9.1",
