Report OS version in keybase status, and therefore log send

--- a/protocol/json/keybase1/config.json
+++ b/protocol/json/keybase1/config.json
@@ -101,6 +101,10 @@
         },
         {
           "type": "string",
+          "name": "osVersion"
+        },
+        {
+          "type": "string",
           "name": "arch"
         },
         {
