--- a/osx/Podfile
+++ b/osx/Podfile
@@ -3,7 +3,7 @@ target "Installer" do
   pod "ObjectiveSugar"
   pod "GBCli"
   pod "Slash"
-  pod "MPMessagePack", :path => "~/Projects/MPMessagePack"
+  pod "MPMessagePack"
   pod "KBKit", :path => "KBKit"
 end
 
@@ -13,7 +13,7 @@ target "Status" do
   pod "ObjectiveSugar"
   pod "GBCli"
   pod "Slash"
-  pod "MPMessagePack", :path => "~/Projects/MPMessagePack"
+  pod "MPMessagePack"
   pod "KBKit", :path => "KBKit"
 end
 
@@ -21,5 +21,5 @@ end
 # here to a minimum.
 target "keybase.Helper" do
   platform :osx, "10.10"
-  pod "MPMessagePack", :path => "~/Projects/MPMessagePack"
+  pod "MPMessagePack"
 end
