--- a/desktop/package.json
+++ b/desktop/package.json
@@ -50,6 +50,7 @@
     "react": "15.3.1",
     "react-addons-css-transition-group": "15.3.1",
     "react-dom": "15.3.1",
+    "react-list": "0.8.0",
     "react-redux": "4.4.5",
     "react-tap-event-plugin": "1.0.0",
     "redux": "3.5.2",
