--- a/desktop/package.json
+++ b/desktop/package.json
@@ -92,6 +92,7 @@
     "eslint-plugin-react": "6.2.0",
     "eslint-plugin-standard": "2.0.0",
     "express": "4.14.0",
+    "file-loader": "0.9.0",
     "fs-extra": "0.30.0",
     "minimist": "1.2.0",
     "mocha": "3.0.2",
