--- a/desktop/package.json
+++ b/desktop/package.json
@@ -92,6 +92,7 @@
     "eslint-plugin-react": "6.2.0",
     "eslint-plugin-standard": "2.0.0",
     "express": "4.14.0",
+    "file-loader": "0.9.0",
     "fs-extra": "0.30.0",
     "minimist": "1.2.0",
     "mocha": "3.0.2",
@@ -115,5 +116,5 @@
   "optionalDependencies": {
     "fsevents": "1.0.14"
   },
-  "keybaseVendoredDependencies": "https://github.com/keybase/js-vendor-desktop.git#a910fa990be59d55f64c005aaed823c57e71d8b0"
+  "keybaseVendoredDependencies": "https://github.com/keybase/js-vendor-desktop.git#27059ffb0a6bc5bc2eeb42505858b71636e952e7"
 }
