turn off audio on qr code scan. adding new ios 10 camera description to plist. qr code still crashes if we render it twice due to a known bug

--- a/react-native/ios/Keybase/Info.plist
+++ b/react-native/ios/Keybase/Info.plist
@@ -58,5 +58,7 @@
 	<string>63ff6926-88f0-4db0-8886-a4bb56bd4ad5</string>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+  <key>NSCameraUsageDescription</key>
+  <string>Scanning codes</string>
 </dict>
 </plist>
