--- a/desktop/package.json
+++ b/desktop/package.json
@@ -4,31 +4,31 @@
   "description": "",
   "main": "./dist/main.bundle.js",
   "scripts": {
-    "vendor-install": "node npm-vendor.js",
-    "vendor-update": "node npm-vendor.js update",
-    "start": "babel-node --presets es2015,stage-2 npm-helper.js start",
-    "start-hot": "babel-node --presets es2015,stage-2 npm-helper.js start-hot",
-    "start-cold": "babel-node --presets es2015,stage-2 npm-helper.js start-cold",
-    "build-dev": "babel-node --presets es2015,stage-2 npm-helper.js build-dev",
-    "build-prod": "babel-node --presets es2015,stage-2 npm-helper.js build-prod",
-    "package": "babel-node --presets es2015,stage-2 npm-helper.js package",
-    "hot-server": "babel-node --presets es2015,stage-2 npm-helper.js hot-server",
-    "inject-sourcemaps-prod": "babel-node --presets es2015,stage-2 npm-helper.js inject-sourcemaps-prod",
-    "inject-code-prod": "babel-node --presets es2015,stage-2 npm-helper.js inject-code-prod",
-    "start-prod": "babel-node --presets es2015,stage-2 npm-helper.js start-prod",
-    "start-hot-debug": "babel-node --presets es2015,stage-2 npm-helper.js start-hot-debug",
-    "debug-main": "babel-node --presets es2015,stage-2 npm-helper.js debug-main",
-    "setup-debug-main": "babel-node --presets es2015,stage-2 npm-helper.js setup-debug-main",
-    "postinstall": "babel-node --presets es2015,stage-2 npm-helper.js postinstall",
-    "render-screenshots": "babel-node --presets es2015,stage-2 npm-helper.js render-screenshots",
-    "updated-fonts": "babel-node --presets es2015,stage-2 npm-helper.js updated-fonts",
+    "vendor-install": "babel-node npm-vendor.js",
+    "vendor-update": "babel-node npm-vendor.js update",
+    "start": "babel-node --presets es2015,stage-2 --plugins transform-flow-strip-types npm-helper.js start",
+    "start-hot": "babel-node --presets es2015,stage-2 --plugins transform-flow-strip-types npm-helper.js start-hot",
+    "start-cold": "babel-node --presets es2015,stage-2 --plugins transform-flow-strip-types npm-helper.js start-cold",
+    "build-dev": "babel-node --presets es2015,stage-2 --plugins transform-flow-strip-types npm-helper.js build-dev",
+    "build-prod": "babel-node --presets es2015,stage-2 --plugins transform-flow-strip-types npm-helper.js build-prod",
+    "package": "babel-node --presets es2015,stage-2 --plugins transform-flow-strip-types npm-helper.js package",
+    "hot-server": "babel-node --presets es2015,stage-2 --plugins transform-flow-strip-types npm-helper.js hot-server",
+    "inject-sourcemaps-prod": "babel-node --presets es2015,stage-2 --plugins transform-flow-strip-types npm-helper.js inject-sourcemaps-prod",
+    "inject-code-prod": "babel-node --presets es2015,stage-2 --plugins transform-flow-strip-types npm-helper.js inject-code-prod",
+    "start-prod": "babel-node --presets es2015,stage-2 --plugins transform-flow-strip-types npm-helper.js start-prod",
+    "start-hot-debug": "babel-node --presets es2015,stage-2 --plugins transform-flow-strip-types npm-helper.js start-hot-debug",
+    "debug-main": "babel-node --presets es2015,stage-2 --plugins transform-flow-strip-types npm-helper.js debug-main",
+    "setup-debug-main": "babel-node --presets es2015,stage-2 --plugins transform-flow-strip-types npm-helper.js setup-debug-main",
+    "postinstall": "babel-node --presets es2015,stage-2 --plugins transform-flow-strip-types npm-helper.js postinstall",
+    "render-screenshots": "babel-node --presets es2015,stage-2 --plugins transform-flow-strip-types npm-helper.js render-screenshots",
+    "updated-fonts": "babel-node --presets es2015,stage-2 --plugins transform-flow-strip-types npm-helper.js updated-fonts",
     "wrap": "npm uninstall fsevents && npm prune && npm dedupe && npm shrinkwrap --dev",
-    "shrinkwrap-audit": "babel-node --presets es2015,stage-2 npm-shrinkwrap-audit",
-    "help": "babel-node --presets es2015,stage-2 npm-helper.js help",
-    "watch-test-file": "KEYBASE_RUN_MODE=devel babel-node --presets es2015,stage-2 npm-helper.js watch-test-file",
+    "shrinkwrap-audit": "babel-node --presets es2015,stage-2 --plugins transform-flow-strip-types npm-shrinkwrap-audit",
+    "help": "babel-node --presets es2015,stage-2 --plugins transform-flow-strip-types npm-helper.js help",
+    "watch-test-file": "KEYBASE_RUN_MODE=devel babel-node --presets es2015,stage-2 --plugins transform-flow-strip-types npm-helper.js watch-test-file",
     "mocha": "KEYBASE_RUN_MODE=devel node_modules/mocha/bin/mocha --require source-map-support/register dist/test.bundle.js",
-    "test": "babel-node --presets es2015,stage-2 npm-helper.js test && npm run mocha",
-    "undiff-log": "babel-node --presets es2015,stage-2 npm-helper.js undiff-log"
+    "test": "babel-node --presets es2015,stage-2 --plugins transform-flow-strip-types npm-helper.js test && npm run mocha",
+    "undiff-log": "babel-node --presets es2015,stage-2 --plugins transform-flow-strip-types npm-helper.js undiff-log"
   },
   "keywords": [],
   "author": "",
