Updates react native to 0.34 and cleans up the dev menu (#4453)
* ios working. using objc for native code. qr code on ios is NOT working on ios 10

* dont need this intent setup, already works w/o it

* turn off audio on qr code scan. adding new ios 10 camera description to plist. qr code still crashes if we render it twice due to a known bug

* add back npm shrinkwrap

* remove unused swift include

* remove native dev menu. move buttons over to dumb sheet. fix off by one in dumb filter. add setting the num of components to show

* moved text to dumb sheet

* moved colors to dumb sheet

* move dumb sheet and cleanup

* add log send to mobile

* fixup android build. remove permissions module as this is built into RN now

* try and fix circle

* Try using oraclejdk8

--- a/circle.yml
+++ b/circle.yml
@@ -3,6 +3,8 @@ machine:
     version: 7.2
   node:
     version: 5.7.0
+  java:
+    version: oraclejdk8
   environment:
     GOPATH: $HOME/go-path
     PATH: $GOROOT/bin:$PATH
