--- a/desktop/package.json
+++ b/desktop/package.json
@@ -12,7 +12,10 @@
     "build-dev": "babel-node --presets es2015,stage-2 npm-helper.js build-dev",
     "build-prod": "babel-node --presets es2015,stage-2 npm-helper.js build-prod",
     "package": "babel-node --presets es2015,stage-2 npm-helper.js package",
-    "hot-server": "babel-node --presets es2015,stage-2 npm-helper.js hot-server",
+    "hot-server": "npm run build-main-thread && npm run build-dll && npm run just-hot-server",
+    "just-hot-server": "babel-node --presets es2015,stage-2 npm-helper.js hot-server",
+    "build-dll": "babel-node --presets es2015,stage-2 npm-helper.js build-dll",
+    "build-main-thread": "babel-node --presets es2015,stage-2 npm-helper.js build-main-thread",
     "build-profile": "babel-node --presets es2015,stage-2 npm-helper.js build-profile",
     "inject-sourcemaps-prod": "babel-node --presets es2015,stage-2 npm-helper.js inject-sourcemaps-prod",
     "inject-code-prod": "babel-node --presets es2015,stage-2 npm-helper.js inject-code-prod",
@@ -99,6 +102,7 @@
     "minimist": "1.2.0",
     "mocha": "3.0.2",
     "null-loader": "0.1.1",
+    "path-chunk-webpack-plugin": "^1.2.0",
     "react-addons-perf": "15.3.2",
     "react-hot-loader": "3.0.0-beta.4",
     "redux-devtools": "3.3.1",
