--- a/.eslintrc
+++ b/.eslintrc
@@ -38,6 +38,8 @@
         "flowtype/define-flow-type": 1,
         "flowtype/use-flow-type": 1,
         "flowtype/delimiter-dangle": [2, "always-multiline"],
+        "flowtype/no-dupe-keys": 2,
+        "flowtype/semi": [2, "never"],
         "jsx-quotes": [2, "prefer-single"],
         "import/named": 2,
         "import/export": 2,
