--- a/desktop/package.json
+++ b/desktop/package.json
@@ -17,6 +17,7 @@
     "hot-server-only": "npm run _helper hot-server",
     "inject-code-prod": "npm run _helper inject-code-prod",
     "inject-sourcemaps-prod": "npm run _helper inject-sourcemaps-prod",
+    "lint": "cd .. && eslint .",
     "local-visdiff": "npm run _helper local-visdiff",
     "mocha": "KEYBASE_RUN_MODE=devel node_modules/mocha/bin/mocha --require source-map-support/register dist/test.bundle.js",
     "package": "npm run _helper package --",
@@ -45,16 +46,16 @@
     "deep-diff": "0.3.4",
     "deep-equal": "1.0.1",
     "framed-msgpack-rpc": "1.1.13",
-    "getenv": "0.6.0",
+    "getenv": "0.7.0",
     "immutable": "3.8.1",
     "jsonfile": "2.4.0",
-    "lodash": "4.16.0",
+    "lodash": "4.16.4",
     "material-ui": "0.15.4",
     "menubar": "5.1.0",
     "mkdirp": "0.5.1",
-    "moment": "2.15.0",
+    "moment": "2.15.1",
     "purepack": "1.0.4",
-    "qrcode-generator": "1.0.3",
+    "qrcode-generator": "1.0.5",
     "react": "15.3.2",
     "react-addons-css-transition-group": "15.3.2",
     "react-dom": "15.3.2",
@@ -67,60 +68,60 @@
     "semver": "5.3.0"
   },
   "devDependencies": {
-    "babel-cli": "6.14.0",
-    "babel-core": "6.14.0",
-    "babel-eslint": "6.1.2",
+    "babel-cli": "6.16.0",
+    "babel-core": "6.17.0",
+    "babel-eslint": "7.0.0",
     "babel-loader": "6.2.5",
     "babel-plugin-react-transform": "2.0.2",
     "babel-plugin-transform-runtime": "6.15.0",
-    "babel-preset-es2015": "6.14.0",
-    "babel-preset-react": "6.11.1",
-    "babel-preset-stage-1": "6.13.0",
-    "babel-preset-stage-2": "6.13.0",
+    "babel-preset-es2015": "6.16.0",
+    "babel-preset-react": "6.16.0",
+    "babel-preset-stage-1": "6.16.0",
+    "babel-preset-stage-2": "6.17.0",
     "babel-runtime": "6.11.6",
     "chai": "3.5.0",
-    "chai-as-promised": "5.3.0",
+    "chai-as-promised": "6.0.0",
     "del": "2.2.2",
     "devtron": "1.3.0",
     "electron-download": "git://github.com/keybase/electron-download#5350b5a1bad8ba7bb8c7201abe59ae3a03c3d75d",
-    "electron-packager": "7.6.0",
-    "electron-prebuilt": "1.3.3",
-    "eslint": "3.5.0",
-    "eslint-config-standard": "6.0.1",
-    "eslint-config-standard-jsx": "3.0.1",
-    "eslint-config-standard-react": "4.0.2",
+    "electron-packager": "8.1.0",
+    "electron": "1.4.3",
+    "eslint": "3.7.1",
+    "eslint-config-standard": "6.2.0",
+    "eslint-config-standard-jsx": "3.2.0",
+    "eslint-config-standard-react": "4.2.0",
     "eslint-plugin-babel": "3.3.0",
     "eslint-plugin-filenames": "1.1.0",
-    "eslint-plugin-flowtype": "2.18.2",
-    "eslint-plugin-import": "1.15.0",
-    "eslint-plugin-mocha": "4.5.1",
+    "eslint-plugin-flowtype": "2.19.0",
+    "eslint-plugin-import": "2.0.0",
+    "eslint-plugin-mocha": "4.6.0",
     "eslint-plugin-promise": "2.0.1",
-    "eslint-plugin-react": "6.2.2",
-    "eslint-plugin-standard": "2.0.0",
+    "eslint-plugin-react": "6.3.0",
+    "eslint-plugin-standard": "2.0.1",
     "express": "4.14.0",
     "file-loader": "0.9.0",
     "fs-extra": "0.30.0",
     "minimist": "1.2.0",
-    "mocha": "3.0.2",
+    "mocha": "3.1.0",
     "null-loader": "0.1.1",
     "react-addons-perf": "15.3.2",
-    "react-hot-loader": "3.0.0-beta.4",
+    "react-hot-loader": "3.0.0-beta.5",
     "redux-devtools": "3.3.1",
     "redux-devtools-dock-monitor": "1.1.1",
     "redux-devtools-log-monitor": "1.0.11",
-    "redux-logger": "2.6.1",
+    "redux-logger": "2.7.0",
     "shrinkpack": "0.17.0",
-    "source-map-support": "0.4.2",
-    "unused-files-webpack-plugin": "2.0.4",
+    "source-map-support": "0.4.3",
+    "unused-files-webpack-plugin": "3.0.0",
     "webpack": "1.13.2",
-    "webpack-dashboard": "0.1.8",
-    "webpack-dev-middleware": "1.8.1",
-    "webpack-dev-server": "1.16.1",
+    "webpack-dashboard": "0.2.0",
+    "webpack-dev-middleware": "1.8.3",
+    "webpack-dev-server": "1.16.2",
     "webpack-hot-middleware": "2.12.2",
     "webpack-target-electron-renderer": "0.4.0"
   },
   "optionalDependencies": {
     "fsevents": "1.0.14"
   },
-  "keybaseVendoredDependencies": "https://github.com/keybase/js-vendor-desktop.git#11aee8cee902fc7db0d3ee82947056c90cb7cc77"
+  "keybaseVendoredDependencies": "https://github.com/keybase/js-vendor-desktop.git#0c1b927be000e91e5ca483648e0dbd768f901eed"
 }
