--- a/react-native/android/build.gradle
+++ b/react-native/android/build.gradle
@@ -3,10 +3,11 @@
 buildscript {
     repositories {
         jcenter()
+        mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.2.1'
-        classpath 'com.github.triplet.gradle:play-publisher:1.1.4' // To publish from gradle
+        classpath 'com.android.tools.build:gradle:2.2.2'
+        classpath 'com.github.triplet.gradle:play-publisher:1.1.5' // To publish from gradle
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
