--- a/desktop/package.json
+++ b/desktop/package.json
@@ -74,6 +74,7 @@
     "babel-loader": "6.2.5",
     "babel-plugin-react-transform": "2.0.2",
     "babel-plugin-transform-runtime": "6.15.0",
+    "babel-plugin-transform-builtin-extend": "1.1.0",
     "babel-preset-es2015": "6.16.0",
     "babel-preset-react": "6.16.0",
     "babel-preset-stage-1": "6.16.0",
