fix the broken handle_distro_upgrade cronjob for Ubuntu 16.10
Users who have upgraded in-place to Ubuntu 16.10 before we ship this fix
will be stranded, with their /etc/apt/sources.list.d/keybase.list repos
disabled by the upgrade. The cronjob that's supposed to re-enable them
has broken on 16.10, because a config value that was assumed to have a
trailing slash stopped having one.

--- a/packaging/linux/deb/cron.template
+++ b/packaging/linux/deb/cron.template
@@ -130,10 +130,14 @@ KEYDATA
 
 # Set variables for the locations of the apt sources lists.
 find_apt_sources() {
+  # NB: These variables only *sometimes* include a trailing slash. (In
+  # particular, in Ubuntu 16.10 / Debian 9, the default value *stopped*
+  # including the trailing slash.) We have to join them with slashes, even
+  # though that sometimes gives a double slash.
   APTDIR=$(apt_config_val Dir)
   APTETC=$(apt_config_val 'Dir::Etc')
-  APT_SOURCES="$APTDIR$APTETC$(apt_config_val 'Dir::Etc::sourcelist')"
-  APT_SOURCESDIR="$APTDIR$APTETC$(apt_config_val 'Dir::Etc::sourceparts')"
+  APT_SOURCES="$APTDIR/$APTETC/$(apt_config_val 'Dir::Etc::sourcelist')"
+  APT_SOURCESDIR="$APTDIR/$APTETC/$(apt_config_val 'Dir::Etc::sourceparts')"
 }
 
 # Update the Keybase repository if it's not set correctly.
