Misc changes. Chat tabs. Cancel sessions.

--- a/desktop/package.json
+++ b/desktop/package.json
@@ -58,10 +58,12 @@
     "qrcode-generator": "1.0.5",
     "react": "15.3.2",
     "react-addons-css-transition-group": "15.3.2",
+    "react-addons-shallow-compare": "15.3.2",
     "react-dom": "15.3.2",
     "react-list": "0.8.0",
     "react-redux": "4.4.5",
     "react-tap-event-plugin": "1.0.0",
+    "react-virtualized": "8.1.1",
     "redux": "3.6.0",
     "redux-saga": "0.12.0",
     "redux-thunk": "2.1.0",
@@ -82,46 +84,46 @@
     "chai": "3.5.0",
     "chai-as-promised": "6.0.0",
     "del": "2.2.2",
-    "devtron": "1.3.0",
+    "devtron": "1.4.0",
+    "electron": "1.4.3",
     "electron-download": "git://github.com/keybase/electron-download#5350b5a1bad8ba7bb8c7201abe59ae3a03c3d75d",
     "electron-packager": "8.1.0",
-    "electron": "1.4.3",
-    "eslint": "3.7.1",
+    "eslint": "3.8.1",
     "eslint-config-standard": "6.2.0",
     "eslint-config-standard-jsx": "3.2.0",
     "eslint-config-standard-react": "4.2.0",
     "eslint-plugin-babel": "3.3.0",
     "eslint-plugin-filenames": "1.1.0",
-    "eslint-plugin-flowtype": "2.19.0",
-    "eslint-plugin-import": "2.0.0",
-    "eslint-plugin-mocha": "4.6.0",
-    "eslint-plugin-promise": "2.0.1",
-    "eslint-plugin-react": "6.3.0",
+    "eslint-plugin-flowtype": "2.20.0",
+    "eslint-plugin-import": "2.0.1",
+    "eslint-plugin-mocha": "4.7.0",
+    "eslint-plugin-promise": "3.3.0",
+    "eslint-plugin-react": "6.4.1",
     "eslint-plugin-standard": "2.0.1",
     "express": "4.14.0",
     "file-loader": "0.9.0",
     "fs-extra": "0.30.0",
     "minimist": "1.2.0",
-    "mocha": "3.1.0",
+    "mocha": "3.1.2",
     "null-loader": "0.1.1",
     "react-addons-perf": "15.3.2",
-    "react-hot-loader": "3.0.0-beta.5",
+    "react-hot-loader": "3.0.0-beta.6",
     "redux-devtools": "3.3.1",
     "redux-devtools-dock-monitor": "1.1.1",
-    "redux-devtools-log-monitor": "1.0.11",
+    "redux-devtools-log-monitor": "1.1.0",
     "redux-logger": "2.7.0",
-    "shrinkpack": "0.17.0",
-    "source-map-support": "0.4.3",
+    "shrinkpack": "0.17.1",
+    "source-map-support": "0.4.5",
     "unused-files-webpack-plugin": "3.0.0",
     "webpack": "1.13.2",
     "webpack-dashboard": "0.2.0",
-    "webpack-dev-middleware": "1.8.3",
+    "webpack-dev-middleware": "1.8.4",
     "webpack-dev-server": "1.16.2",
-    "webpack-hot-middleware": "2.12.2",
+    "webpack-hot-middleware": "2.13.0",
     "webpack-target-electron-renderer": "0.4.0"
   },
   "optionalDependencies": {
     "fsevents": "1.0.14"
   },
-  "keybaseVendoredDependencies": "https://github.com/keybase/js-vendor-desktop.git#0c1b927be000e91e5ca483648e0dbd768f901eed"
+  "keybaseVendoredDependencies": "https://github.com/keybase/js-vendor-desktop.git#18cf084298b0b3776b8d30188c1ad501c6055350"
 }
