--- a/.eslintrc
+++ b/.eslintrc
@@ -29,7 +29,7 @@
         "babel/func-params-comma-dangle": 0,
         "comma-dangle": [2, "always-multiline"],
         "filenames/match-regex": [2, "^[0-9a-z-.]+(\\.desktop|\\.native|\\.ios|\\.android)?$"],
-        "flowtype/require-valid-file-annotation": [2, "always"],
+        "flowtype/require-valid-file-annotation": [2, "always", {"annotationStyle": "line"}],
         "flowtype/space-after-type-colon": [2, "always"],
         "flowtype/space-before-generic-bracket": [2, "never"],
         "flowtype/union-intersection-spacing": [2, "always"],
