--- a/react-native/android/settings.gradle
+++ b/react-native/android/settings.gradle
@@ -3,3 +3,5 @@ rootProject.name = 'Keybase'
 include ':app', ':keybaselib'
 include ':ReactNativeBarcodescanner', ':app'
 project(':ReactNativeBarcodescanner').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-barcodescanner/android')
+include ':react-native-push-notification', ':app'
+project(':react-native-push-notification').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-push-notification/android')
