--- a/react-native/package.json
+++ b/react-native/package.json
@@ -17,10 +17,10 @@
     "buffer": "5.0.0",
     "deep-diff": "0.3.4",
     "framed-msgpack-rpc": "1.1.13",
-    "getenv": "0.6.0",
+    "getenv": "0.7.0",
     "iced-runtime": "1.0.3",
     "immutable": "3.8.1",
-    "lodash": "4.16.2",
+    "lodash": "4.16.4",
     "moment": "2.15.1",
     "purepack": "1.0.4",
     "qrcode-generator": "1.0.5",
@@ -28,6 +28,7 @@
     "react-native": "0.36.0",
     "react-native-barcodescanner": "3.1.1",
     "react-native-camera": "git://github.com/lwansbrough/react-native-camera.git#6074ec3c8275ef5eb5fc39489c9a379f6ced923b",
+    "react-native-push-notification": "2.2.0",
     "react-redux": "4.4.5",
     "redux": "3.6.0",
     "redux-saga": "0.12.0",
@@ -37,6 +38,6 @@
     "util": "0.10.3"
   },
   "devDependencies": {
-    "redux-logger": "2.6.1"
+    "redux-logger": "2.7.0"
   }
 }
