--- a/desktop/package.json
+++ b/desktop/package.json
@@ -47,6 +47,7 @@
   "dependencies": {
     "deep-diff": "0.3.4",
     "deep-equal": "1.0.1",
+    "electron": "1.4.8",
     "framed-msgpack-rpc": "1.1.13",
     "getenv": "0.7.0",
     "immutable": "3.8.1",
@@ -55,17 +56,17 @@
     "material-ui": "0.15.4",
     "menubar": "5.1.0",
     "mkdirp": "0.5.1",
-    "moment": "2.16.0",
+    "moment": "2.17.0",
     "purepack": "1.0.4",
     "qrcode-generator": "1.0.5",
-    "react": "15.4.0",
-    "react-addons-css-transition-group": "15.4.0",
-    "react-addons-shallow-compare": "15.4.0",
-    "react-dom": "15.4.0",
+    "react": "15.4.1",
+    "react-addons-css-transition-group": "15.4.1",
+    "react-addons-shallow-compare": "15.4.1",
+    "react-dom": "15.4.1",
     "react-list": "0.8.0",
     "react-redux": "4.4.6",
     "react-tap-event-plugin": "2.0.1",
-    "react-virtualized": "8.5.2",
+    "react-virtualized": "8.5.3",
     "redux": "3.6.0",
     "redux-saga": "0.13.0",
     "redux-thunk": "2.1.0",
@@ -77,8 +78,8 @@
     "babel-eslint": "7.1.1",
     "babel-loader": "6.2.8",
     "babel-plugin-react-transform": "2.0.2",
-    "babel-plugin-transform-runtime": "6.15.0",
     "babel-plugin-transform-builtin-extend": "1.1.0",
+    "babel-plugin-transform-runtime": "6.15.0",
     "babel-preset-es2015": "6.18.0",
     "babel-preset-react": "6.16.0",
     "babel-preset-stage-1": "6.16.0",
@@ -91,13 +92,13 @@
     "electron": "1.4.7",
     "electron-download": "git://github.com/keybase/electron-download#5350b5a1bad8ba7bb8c7201abe59ae3a03c3d75d",
     "electron-packager": "8.3.0",
-    "eslint": "3.10.2",
+    "eslint": "3.11.1",
     "eslint-config-standard": "6.2.1",
     "eslint-config-standard-jsx": "3.2.0",
     "eslint-config-standard-react": "4.2.0",
     "eslint-plugin-babel": "4.0.0",
     "eslint-plugin-filenames": "1.1.0",
-    "eslint-plugin-flowtype": "2.25.0",
+    "eslint-plugin-flowtype": "2.28.2",
     "eslint-plugin-import": "2.2.0",
     "eslint-plugin-mocha": "4.7.0",
     "eslint-plugin-promise": "3.4.0",
@@ -107,9 +108,9 @@
     "file-loader": "0.9.0",
     "fs-extra": "1.0.0",
     "minimist": "1.2.0",
-    "mocha": "3.1.2",
+    "mocha": "3.2.0",
     "null-loader": "0.1.1",
-    "react-addons-perf": "15.4.0",
+    "react-addons-perf": "15.4.1",
     "react-hot-loader": "3.0.0-beta.6",
     "redux-devtools": "3.3.1",
     "redux-devtools-dock-monitor": "1.1.1",
